--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,14 +9,11 @@ services:
     image: postgres:9.6
     hostname: db
 
-    # TODO: ENV-ify?
-    environment:
-      - POSTGRES_USER=fanfic
-      - POSTGRES_PASSWORD=fanfic
-      - POSTGRES_DB=fanfic
-
     ports:
       - '5432:5432'
+
+    env_file:
+      - postgres.env
 
   redis:
     image: redis:3.0.7
