Forward Redis port.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,7 +16,11 @@ services:
       - postgres.env
 
   redis:
+
     image: redis:3.0.7
+
+    ports:
+      - '6379:6379'
 
   fanfic:
     build: ./fanfic
